fix z-index

--- a/css/counter.css
+++ b/css/counter.css
@@ -30,7 +30,7 @@
 .stream-video-player iframe {position:absolute; left:0; top:0; width:100%; height:100%}
 
 @media screen and (max-width:1159px) {
-    .stream-video {display:none; margin:50px 0 48px 0}
+    .stream-video {display:none; margin:50px 0 48px 0; z-index:auto}
     .stream-video-title {font-size:40px; line-height:48px}
     .stream-video-subtitle {margin:9px 0 0 0; font-size:30px; line-height:36px}
     .stream-video-player {margin:38px 0 0 0; height:302px}
